# synaps-skills

./: .gitattributes  .gitignore  AGENTS.md  IMPL_AGENT_BRIEFING.md  LICENSE  README.md  install.sh
.github/workflows/: axel-memory-manager-release.yml  axel-upstream-bump.yml
.synaps-plugin/: marketplace.json
axel-memory-manager-plugin/: README.md
axel-memory-manager-plugin/.synaps-plugin/: plugin.json
axel-memory-manager-plugin/docs/: recall-fix-and-self-update-plan.md  self-healing.md  settings-and-bg-consolidate-plan.md
axel-memory-manager-plugin/extensions/memory-manager/: Cargo.toml  README.md
axel-memory-manager-plugin/extensions/memory-manager/src/: enricher.rs  gliner.rs  main.rs  settings.rs  timer.rs
axel-memory-manager-plugin/extensions/memory-manager/tests/: bg_timer.rs  enrichment_offline.rs  gliner_inference.rs  gliner_lazy_load.rs  integration_wire.rs  settings_roundtrip.rs
axel-memory-manager-plugin/extensions/memory-manager/tests/fixtures/: gliner_golden.json
axel-memory-manager-plugin/lib/: memory.sh
axel-memory-manager-plugin/scripts/: setup.sh
dev-tools-plugin/.synaps-plugin/: plugin.json
docs/plans/: 2026-04-08-bbe-multi-agent-design.md  2026-04-08-bbe-multi-agent-plan.md  2026-04-08-phi-probe-design.md  2026-04-08-phi-probe-plan.md  PHASE_6_SPEC_ADDENDUM.md  PLATFORM.SPEC.md
engineering-plugin/: .gitignore  DESIGN.md  README.md  package.json
engineering-plugin/.oracle/: AUTHORING-INTERFACE.md  DECISIONS.md
engineering-plugin/.plans/: .gitignore  dynamic-theme.plan.html  engineering-toolkit-upgrade.events.json  engineering-toolkit-upgrade.plan.html  html-plan-ecosystem.oracle.jsonl  html-plan-ecosystem.plan.html  plan-site.plan.html  plans-gitignore-hardening.plan.html  plans-server-sidecar.plan.html  theme.json
engineering-plugin/.synaps-plugin/: plugin.json
engineering-plugin/assets/: md.js  plan.css  plan.js  shell.html  shell.js  site.css  site.js
engineering-plugin/extensions/: plans_server.js
engineering-plugin/lib/: discovery.js  inbox.js  paths.js  server_lifecycle.js  store.js  theme.js  watch.js
engineering-plugin/specs/: adversarial-test-oracle.impl-plan.md  adversarial-test-oracle.md  checkpoint-aware-compaction.impl-plan.md  checkpoint-aware-compaction.md  dynamic-theme.md  html-plan-ecosystem.impl-plan.md  html-plan-ecosystem.md  plan-site.md
extension-showcase-plugin/: README.md
extension-showcase-plugin/.synaps-plugin/: plugin.json
extension-showcase-plugin/docs/: demo.md
extension-showcase-plugin/extensions/: showcase.py
extension-showcase-plugin/scripts/: test-extension.sh
guest-agent/: .gitignore  Cargo.toml  README.md  config.example.yaml
guest-agent/docs/: contract.md  integration.md
guest-agent/packaging/: README.md  install.sh
guest-agent/packaging/systemd/: kasmvnc@.service  pria-guest-agent.service  synaps-fsmon.service
guest-agent/src/: config.rs  error.rs  hmac.rs  ids.rs  lib.rs  main.rs  paths.rs  runtime.rs  sessions.rs  test_support.rs  versions.rs
guest-agent/src/api/: desktop.rs  fsmon.rs  health.rs  mod.rs  policy.rs  principals.rs  sessions.rs  usage.rs
guest-agent/src/desktop/: kasmvnc.rs  mod.rs  ports.rs
guest-agent/src/fsmon/: client.rs  compile.rs  mod.rs  relay.rs  types.rs
guest-agent/src/os/: mod.rs  users.rs
guest-agent/src/pria_client/: mod.rs  payloads.rs  signer.rs
guest-agent/src/supervisor/: mod.rs
guest-agent/src/synaps/: launcher.rs  mod.rs  session_context.rs
guest-agent/tests/: alignment_tests.rs  desktop_tests.rs  e2e_virsh.rs  fsmon_tests.rs  health_tests.rs  hmac_tests.rs  packaging_tests.rs  policy_tests.rs  principals_tests.rs  sessions_tests.rs  usage_tests.rs
local-voice-plugin/: Cargo.toml  README.md
local-voice-plugin/.synaps-plugin/: plugin.json
local-voice-plugin/scripts/: setup.sh
local-voice-plugin/src/: audio.rs  build_info.rs  commands.rs  extension_rpc.rs  main.rs  protocol.rs  settings.rs  stt_whisper.rs  vad.rs
local-voice-plugin/tests/: extension_commands_rpc.rs  extension_info_rpc.rs  extension_settings_editor_state.rs  extension_settings_rpc.rs  manifest_settings.rs  sidecar_protocol.rs
memkoshi-plugin/: README.md
memkoshi-plugin/.synaps-plugin/: plugin.json
plugin-maker-plugin/: README.md
plugin-maker-plugin/.synaps-plugin/: plugin.json
plugin-maker-plugin/docs/: conventions.md  extension-system.md  keybinds.md  language-templates.md  manifest-reference.md  patterns.md  permissions-and-hooks.md  scaffolding.md  settings-categories.md  sidecar-protocol.md  validation.md
plugin-maker-plugin/extensions/: plugin_maker_ext.py
plugin-maker-plugin/lib/: catalog.sh  common.sh  frontmatter.sh  info.sh  languages.sh  lint.sh  scaffold.sh  scaffold_command.sh  scaffold_extension.sh  scaffold_keybind.sh  scaffold_settings.sh  scaffold_sidecar.sh  validate.sh  validate_commands.sh  validate_extension.sh  validate_keybinds.sh  validate_settings.sh  validate_sidecar.sh
plugin-maker-plugin/scripts/: test.sh  test_protocol.sh
pria-fsmon-plugin/: README.md
pria-fsmon-plugin/extensions/synaps-fsmon/: Cargo.toml
pria-fsmon-plugin/extensions/synaps-fsmon/src/: audit.rs  control.rs  daemon.rs  fanotify.rs  main.rs  policy.rs
pria-fsmon-plugin/extensions/synaps-fsmon/tests/: control_socket.rs
pria-session-context-plugin/: README.md
skill-maker-plugin/: README.md
synaps-bridge-plugin/: .gitignore  README.md  SUBAGENT_BRIEF.md  package-lock.json  package.json  vitest.config.js
synaps-vm-automation/: README.md  docs-smoke-test.md
tmux-tools-plugin/: README.md
(+708 files in other folders)
