[package]
name = "pria-guest-agent"
version = "0.1.0"
edition = "2021"
description = "Pria in-VM trusted supervisor / control endpoint for Account Agentic VMs. Narrow typed HTTP API (/guest/v1/*), HMAC-authenticated, drives Linux principals, Synaps sessions, policy + fsmon, and signed Pria callbacks. Never modifies SynapsCLI core."
license = "MIT"
publish = false

[[bin]]
name = "pria-guest-agent"
path = "src/main.rs"

[lib]
name = "pria_guest_agent"
path = "src/lib.rs"

[features]
# Exposes in-crate test fakes (FakePriaClient, fake OS layer) to integration
# tests and downstream harnesses (spec §13.2).
test-fakes = []

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
