[package]
name = "memory-manager"
version = "0.1.0"
edition = "2021"
description = "Axel memory manager — Synaps CLI extension (JSON-RPC 2.0 over stdio)"
license = "MIT"

[[bin]]
name = "memory-manager"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Upstream Axel — portable agent intelligence (.r8 brain file).
# https://github.com/HaseebKhalid1507/axel
axel = { git = "https://github.com/HaseebKhalid1507/axel", branch = "main" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
