[package]
name = "synaps-fsmon"
version = "0.1.0"
edition = "2021"
description = "Pria in-VM file-write monitor (fanotify FAN_*_PERM, inline blocking, L1 policy cache, fail-closed). Sibling daemon — NOT a Synaps-managed sidecar (HS-5)."
license = "MIT"
publish = false

[[bin]]
name = "synaps_fsmon"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
